src/main/java/org/forgerock/openam/logreader/parser/OpenAMLog.bnf
/*
 * The contents of this file are subject to the terms of the Common Development and
 * Distribution License (the License). You may not use this file except in compliance with the
 * License.
 *
 * You can obtain a copy of the License at legal/CDDLv1.0.txt. See the License for the
 * specific language governing permission and limitations under the License.
 *
 * When distributing Covered Software, include this CDDL Header Notice in each file and include
 * the License file at legal/CDDLv1.0.txt. If applicable, add the following below the CDDL
 * Header, with the fields enclosed by brackets [] replaced by your own identifying
 * information: "Portions copyright 2014 ForgeRock AS".
 *
 * Copyright 2014 ForgeRock AS.
 */

{
  parserClass="org.forgerock.openam.logreader.parser.OpenAMLogParser"

extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

psiClassPrefix="OpenAMLog"
psiImplClassSuffix="Impl"
psiPackage="org.forgerock.openam.logreader.psi"
psiImplPackage="org.forgerock.openam.logreader.psi.impl"

elementTypeHolderClass="org.forgerock.openam.logreader.psi.OpenAMLogTypes"
elementTypeClass="org.forgerock.openam.logreader.psi.OpenAMLogElementType"
tokenTypeClass="org.forgerock.openam.logreader.psi.OpenAMLogTokenType"
}

openAMLogFile ::= item_*

private item_ ::= (COMMENT|log|CRLF)

log ::= logtitle CRLF logcontent
logtitle ::= (DEBUG_NAME SEPARATOR DATE SEPARATOR THREAD_NAME)
logcontent ::= LOG_LINE CRLF  (LOG_LINE? CRLF)* END_OF_LOG_CONTENT | LOG_LINE CRLF  (LOG_LINE? CRLF)* LOG_LINE END_OF_LOG_CONTENT | LOG_LINE END_OF_LOG_CONTENT
